@@ -12,4 +12,12 @@ libraryDependencies ++= Seq(
   javaWs
 )
 
+javaOptions in Test ++= Seq(
+  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
+  "-Xms512M",
+  "-Xmx1536M",
+  "-Xss1M",
+  "-XX:MaxPermSize=384M"
+)
+
 //libraryDependencies += "mysql" % "mysql-connector-java" % "5.1.36"
